Prevent display overflow
There was an issue with display overflow if the
user keeps pressing a number to try and overflow
the display.

However, because of the fixed width and
height of the calculator, there isn't an issue if
the results number becomes too large because the
results are shown using exponents.

Therefore, I decided to hide the overflow so the
user can add as much numbers as they want but will
be frustrated because they can't see the numbers.

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     margin-bottom: 10px;
     text-align: right;
     border: solid black;
+    overflow: hidden;
 }
 
 #container {
